fix java 10+ problem (#8)
* fix java 10+ problem

* lock down to java-8 instead java-10